HW1-DHCP/iptables-rules
*filter
:INPUT ACCEPT
:OUTPUT ACCEPT
:FORWARD DROP


# Intranet
-A INPUT -i enp0s8 -j ACCEPT

# Deny SSH to Router
-A INPUT -d 10.113.0.22/32 -p tcp --dport 22 -j REJECT
-A INPUT -d 10.113.22.254/32 -p tcp --dport 22 -j REJECT


# Allow established connections
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT

# Intranet
-A FORWARD -i enp0s8 -j ACCEPT


# Ping ICMP
-A FORWARD -p icmp -j ACCEPT

# To agent
-A FORWARD -d 10.113.22.129/32 -p tcp --dport 22 -j ACCEPT

# DNS
-A FORWARD -d 10.113.22.1/32 -p udp --dport 53 -j ACCEPT
-A FORWARD -d 10.113.22.1/32 -p tcp --dport 53 -j ACCEPT
-A FORWARD -d 10.113.22.2/32 -p udp --dport 53 -j ACCEPT
-A FORWARD -d 10.113.22.2/32 -p tcp --dport 53 -j ACCEPT

# Proxy
-A FORWARD -d 10.113.22.80/32 -p tcp --dport 80 -j ACCEPT

# Mail
-A FORWARD -d 10.113.22.25/32 -p tcp --dport 25 -j ACCEPT
-A FORWARD -d 10.113.22.25/32 -p tcp --dport 110 -j ACCEPT
-A FORWARD -d 10.113.22.25/32 -p tcp --dport 143 -j ACCEPT
-A FORWARD -d 10.113.22.25/32 -p tcp --dport 587 -j ACCEPT
-A FORWARD -d 10.113.22.25/32 -p tcp --dport 995 -j ACCEPT

# LDAP
-A FORWARD -d 10.113.22.89/32 -p tcp --dport 389 -j ACCEPT
-A FORWARD -d 10.113.22.89/32 -p tcp --dport 22 -j ACCEPT

# SNMP
-A FORWARD -d 10.113.22.161/32 -p tcp --dport 161 -j ACCEPT
-A FORWARD -d 10.113.22.161/32 -p udp --dport 161 -j ACCEPT
-A FORWARD -d 10.113.22.161/32 -p tcp --dport 22 -j ACCEPT

COMMIT

*nat
# Change Source IP Address
-A POSTROUTING -s 10.113.22.0/24 ! -d 10.113.0.0/16 -j MASQUERADE

COMMIT
